--- a/index_contato.html
+++ b/index_contato.html
@@ -65,19 +65,19 @@
             <h3> <b>Click e escreva seu contato</b></h3>
             <h4>Entraremos em contato em 24 horas!</h4>
             <fieldset>
-                <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+                <input placeholder="Seu nome" type="text" tabindex="1" required autofocus>
             </fieldset>
             <fieldset>
-                <input placeholder="Your Email Address" type="email" tabindex="2" required>
+                <input placeholder="Seu endereço de e-email" type="email" tabindex="2" required>
             </fieldset>
             <fieldset>
-                <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+                <input placeholder="Seu número de telefone" type="tel" tabindex="3" required>
             </fieldset>
             <fieldset>
-                <input placeholder="Your Web Site starts with http://" type="url" tabindex="4" required>
+                <input placeholder="Seu Web Site starts with http://" type="url" tabindex="4" required>
             </fieldset>
             <fieldset>
-                <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+                <textarea placeholder="Escreva sua mensagem aqui...." tabindex="5" required></textarea>
             </fieldset>
             <fieldset>
                 <button name="submit" type="submit" id="contact-submit" data-submit="...Sending"><b>Submeter</b> </button>
