correção do texto da caixa de contatos

--- a/index_contato.html
+++ b/index_contato.html
@@ -74,7 +74,7 @@
                 <input placeholder="Seu número de telefone" type="tel" tabindex="3" required>
             </fieldset>
             <fieldset>
-                <input placeholder="Seu Web Site starts with http://" type="url" tabindex="4" required>
+                <input placeholder="Seu Web Site deve começar com: http://" type="url" tabindex="4" required>
             </fieldset>
             <fieldset>
                 <textarea placeholder="Escreva sua mensagem aqui...." tabindex="5" required></textarea>
