Adicionado link para abrir nova aba no contato e sobre nós

--- a/index_contato.html
+++ b/index_contato.html
@@ -32,10 +32,10 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/index_sobre_nós.html">Sobre nós</a>
+                            <a href="/index_sobre_nós.html"target="_blank">Sobre nós</a>
                         </li>
                         <li>
-                            <a href="/index_contato.html">Contato</a>
+                            <a href="/index_contato.html"target="_blank">Contato</a>
                         </li>
                     </ul>
                 </nav>
