--- a/site_cidade_recife.html
+++ b/site_cidade_recife.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Autor" content="Sandro Luiz T. dos Santos">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&family=Nunito:wght@400;600;800&family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -51,7 +52,8 @@
                 <div class="area-text">
                     <span>👋 Seja Bem-vindo à Happy Turismo</span>
                     <h1><strong>Conheça Recife e Seus Belos Pontos Turisticos!</strong></h1>
-                    <p><em>A Cidade de Recife</em> encanta com suas belas praias, pontos turisticos e seus prédios históricos! <a href="https://www.google.com/maps/place/Recife,+PE/@-8.0455772,-35.0685629,12.25z/data=!4m8!1m2!2m1!1sCoisas+legais+para+fazer!3m4!1s0x7ab196f94e5408b:0xe5800ef782bde3a6!8m2!3d-8.0578487!4d-34.8829007" target="_blank"> Acesse o mapa mundi e veja a localização clicando aqui!</a></p>
+                    <p><em>A Cidade de Recife</em> encanta com suas belas praias, pontos turisticos e seus prédios históricos!</p>
+                    <p><a href="https://www.google.com/maps/place/Recife,+PE/@-8.0455772,-35.0685629,12.25z/data=!4m8!1m2!2m1!1sCoisas+legais+para+fazer!3m4!1s0x7ab196f94e5408b:0xe5800ef782bde3a6!8m2!3d-8.0578487!4d-34.8829007" target="_blank"> Acesse o mapa mundi e veja a localização clicando aqui!</a>
                     <button>Eu quero visitar!</button>
                 </div>
                 <div class="area-image">
